--- a/dark-theme.css
+++ b/dark-theme.css
@@ -1,7 +1,7 @@
 :root {
-  --main-bg-color: #222; /* General background */
-  --main-dark-highlight: #363636; /* Text input, dividers */
-  --main-highlight: #545454; /* Message bar top (new messages), Currently selected chat, Nes messages line */
+  --main-bg-color: #282A36; /* General background */
+  --main-dark-highlight: #141622; /* Text input, dividers */
+  --main-highlight: #151724; /* Message bar top (new messages), Currently selected chat, Nes messages line */
   --main-text: #e6e6e6; /* Main text in the chat windows */
   --text-hover: #c7c7c7; /* Based on the usage should be link hover color */
 }
