--- a/dark-theme.css
+++ b/dark-theme.css
@@ -1208,7 +1208,7 @@ a.c-member_slug, .c-member_slug--link, .c-mrkdwn__subteam--link {
 .c-message_list__unread_divider__label {
   background: var(--main-bg-color);
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
-  color: var(--main-highlight);
+  color: var(--main-text);
 }
 
 .c-message_list__unread_divider__separator {
